<resources>
    <string name="app_name">Top 5 MMORPG 2016</string>
    <string name="intro_text">Top 5 most anticipated mmorpg game fans are waiting for in the year 2016.  In no particular order, these games are some of the top games people are waiting for.</string>
    <string name="intro_text2">All games include some minor details of the game, features, classes, crafting (if any), official link to website, and videos.</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="black_desert_gameplay">Black Desert takes the sandbox concept and takes it to the next level by incorporating elements of real world physics and weather. It boasts of a very cool parkour system – similar to those seen so far in cutting-edge console titles such as Assassin’s Creed – where players can climb and interact with buildings and other environmental objects. A dynamic weather system which whips up typhoons or fog also adds another element to combat as players take advantage of these conditions.</string>
    <string name="bless_gameplay">In Bless, players are plunged in a medieval world and fictional era known as the Era of Blessing where conflict between the two main factions, Cosmopolis and Hierapolis, dominates the world affairs. Heroes will fight for their respective faction and walk through a special storyline specific to one of the 10 races they chose, which should draw in role-playing fans and those craving for high replayability.</string>
    <string name="lineage_gameplay">Lineage Eternal puts players in the boots of a fantasy action hero, grants them hack-and-slash combat capabilities, and then plunges them in exciting boss fights and massive sieges. In terms of combat, players will have to learn an interesting new drag action input system where skills become activated through on-screen mouse gestures – a cool departure from the often heavy keyboard clicking in other MMORPGs.</string>
    <string name="lost_ark_gameplay">Lost Ark is an action MMORPG where players can control a class and proceed to explore a mysterious world, plumb the depths of dungeons to take on huge bosses and retrieve legendary loot. Fans have compared it to Diablo but with more classes – 18 announced so far – from which to choose. This bumps up the fun factor in co-op as players figure out the optimal party configurations for a particularly difficult boss battle.</string>
    <string name="otherland_gameplay">Otherland is a fantasy cyberbunk MMORPG based on the best-selling books by Tad Williams. Built using the Unreal Engine 3, Otherland has arresting graphics and strong focus on character look customization. Players can lock in one of four classes for their character, and each class is allowed to equip every weapon available in the game, although some classes are more efficient in certain weapons than others.</string>
</resources>
